assets/js/base/components/select/style.scss
.wc-block-select {
	height: 3em;
	position: relative;
	margin-bottom: $gap-large;

	label {
		@include font-size(16px, 22px);
		position: absolute;
		transform: translateY(#{$gap-smallest}) scale(0.75);
		transform-origin: top left;
		transition: all 200ms ease;
		color: $gray-50;
		z-index: 1;
		margin: 0 $gap;
		overflow: hidden;
		text-overflow: ellipsis;
		max-width: calc(100% - #{  2 * $gap });
		white-space: nowrap;

		@media screen and (prefers-reduced-motion: reduce) {
			transition: none;
		}
	}

	&.has-error select {
		border-color: $error-red;
		background-image: svg-encode('<svg xmlns="http://www.w3.org/2000/svg" width="292.4" height="292.4"><path fill="#{$error-red}" d="M287 69.4a17.6 17.6 0 0 0-13-5.4H18.4c-5 0-9.3 1.8-12.9 5.4A17.6 17.6 0 0 0 0 82.2c0 5 1.8 9.3 5.4 12.9l128 127.9c3.6 3.6 7.8 5.4 12.8 5.4s9.2-1.8 12.8-5.4L287 95c3.5-3.5 5.4-7.8 5.4-12.8 0-5-1.9-9.2-5.5-12.8z"/></svg>');
	}

	&.has-error label,
	&.has-error select {
		color: $error-red;
	}

	select {
		@include font-size(16px);
		background-color: #fff;
		box-shadow: none;
		color: $input-text-active;
		font-family: inherit;
		font-weight: normal;
		height: 3em;
		letter-spacing: inherit;
		line-height: 1;
		overflow: hidden;
		padding: rem($gap-large) $gap rem($gap-smallest);
		text-overflow: ellipsis;
		text-transform: none;
		white-space: nowrap;
		width: 100%;
		appearance: none;
		background-image: svg-encode('<svg xmlns="http://www.w3.org/2000/svg" width="292.4" height="292.4"><path fill="#{$input-text-active}" d="M287 69.4a17.6 17.6 0 0 0-13-5.4H18.4c-5 0-9.3 1.8-12.9 5.4A17.6 17.6 0 0 0 0 82.2c0 5 1.8 9.3 5.4 12.9l128 127.9c3.6 3.6 7.8 5.4 12.8 5.4s9.2-1.8 12.8-5.4L287 95c3.5-3.5 5.4-7.8 5.4-12.8 0-5-1.9-9.2-5.5-12.8z"/></svg>');
		background-position: calc(100% - #{$gap - 4px}) center;
		background-repeat: no-repeat;
		background-size: 8px;
		&:hover,
		&:focus,
		&:active {
			background-color: #fff;
			text-decoration: none;
		}
	}
}

